<resources>
    <string name="app_name">SajiApps</string>
    <string name="hello">Hello</string>
    <string name="sign_in_to_">Sign in to your account</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome">Selamat Datang</string>
    <string name="searchbar_hint">Mau masak apa hari ini?</string>
    <string name="daftar">Daftar</string>
    <string name="silakan_daftar">Silakan Daftar Akun Terlebih Dahulu</string>
    <string name="scanner">Scanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menuMasakan">Menu Masakan</string>
    <string name="desc">Deskripsi</string>
    <string name="isidesc">Isi Desc :</string>
    <string name="judul">Judul</string>
    <string name="logOut">Keluar</string>
    <string name="isiDesc">Pancake memiliki ciri khas rasa yang manis walaupun tanpa topping apapun. Namun tak jarang yang menyajikan pancake dengan topping-topping manis seperti madu, saus stroberi, hingga buah-buahan.</string>
    <string name="kulkas">Kulkas</string>
    <string name="kulkas_content">Bingung mau masak apa? Cek isi kulkasmu dan dapatkan beragam inspirasi resep</string>
    <string name="terongBalado">Terong Balado</string>
</resources>