<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation3"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.sajiapps.home.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.dicoding.sajiapps.home.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.dicoding.sajiapps.home.ui.notifications.KulkasFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_kulkas" />
    <fragment
        android:id="@+id/profile"
        android:name="com.dicoding.sajiapps.home.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="profile"/>
    <activity
        android:id="@+id/scanner"
        android:name="com.dicoding.sajiapps.home.ui.scanner.ScannerActivity"
        android:label="Scanner"
        tools:layout="@layout/activity_scanner" />

</navigation>